--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "loadash": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
